[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = ""
authors = ["talahajeer <tala.hajeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.2"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
